updating collections and reactive changes on the template + sorting the collections to display

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -13,4 +13,7 @@
   <li class="player {{selectedClass}}">{{name}} : {{score}}</li>
   {{/each}}
   </ul>
+
+  <input type="button" class="increment" value="Give 5 points" />
+  <input type="button" class="decrement" value="Drop 5 points" />
 </template>
