using session to track object that we want and render in view from collection

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,6 +12,7 @@
   {{#each player}}
   <li class="player {{selectedClass}}">{{name}} : {{score}}</li>
   {{/each}}
+  <li>Selected Player: {{showSelectedPlayer.name}}</li>
   </ul>
 
   <input type="button" class="increment" value="Give 5 points" />
