Booya, another CRUD example

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,6 +5,7 @@
 <body>
   <h1>Leaderboard</h1>
   {{> leaderboard}}
+  {{> addPlayerForm}}
 </body>
 
 <template name="leaderboard">
@@ -17,4 +18,12 @@
 
   <input type="button" class="increment" value="Give 5 points" />
   <input type="button" class="decrement" value="Drop 5 points" />
+  <input type="button" class="remove" value="Remove Player" />
+</template>
+
+<template name="addPlayerForm">
+  <form>
+    <input type="text" name="playerName">
+    <input type="submit" value="Add Player">
+  </form>
 </template>
