Add in accounts packages and restrict leaderboard to per-user access

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,6 +4,7 @@
 
 <body>
   <h1>Leaderboard</h1>
+  {{> loginButtons}}
   {{> leaderboard}}
   {{> addPlayerForm}}
 </body>
@@ -22,8 +23,10 @@
 </template>
 
 <template name="addPlayerForm">
+  {{#if currentUser}}
   <form>
     <input type="text" name="playerName">
     <input type="submit" value="Add Player">
   </form>
+  {{/if}}
 </template>
